<resources>
    <string name="app_name">TPath</string>
    <string name="calendar">Calendar</string>
    <string name="aid">Aid</string>
    <string name="post">Post</string>
    <string name="t_b_test_health_form"><![CDATA[T>B Test & Health Form]]></string>
    <string name="pre_requisite_yr_1">Pre-requisite YR-1</string>
    <string name="certificate_of_clearance_fingerprints">Certificate of Clearance (fingerprints)</string>
    <string name="cpr_training_certificate">CPR Training Certificate</string>
    <string name="logoschool">logoschool</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="year_1_testing">Year 1 Testing</string>
    <string name="cbest">CBEST</string>
    <string name="year_1_eductional_plan">Year 1 Eductional Plan</string>
    <string name="align_undergrad">Align Undergrad</string>
    <string name="u_s_constitution">U.S. Constitution</string>
    <string name="health_education">Health Education</string>
    <string name="title_activity_tpathlogin">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="undergrad">UnderGrad</string>
    <string name="financial_aid">Financial Aid</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_cal">Cal</string>
    <string name="title_activity_post_grad">PostGrad</string>
    <string name="advising_session1">Advising Session</string>
    <string name="pre_requisite_yr_4">Pre Requisite YR 4</string>
    <string name="ed_specialist_program1">ED Specialist Program</string>
    <string name="biligual_auth_program1">Biligual Auth Program</string>
    <string name="year_3_prep_bilingual">Year 3 Prep Bilingual</string>
    <string name="ed_350">ED 350</string>
    <string name="advising_session2">Advising Session</string>
    <string name="year_3_educational_plan">Year 3 Educational Plan</string>
    <string name="year_2_educational_plan">Year 2 Educational Plan</string>
    <string name="pre_requisite_yr_2">Pre Requisite YR 2</string>
    <string name="year_2_testing">Year 2 Testing</string>
    <string name="cbest1">CBEST</string>
    <string name="cset_prep">CSET Prep</string>
    <string name="advising_session4">Advising Session</string>
    <string name="align_undergrad2">Align Undergrad</string>
    <string name="ed_364">ED 364</string>
    <string name="u_s_constitution2">U.S. Constitution</string>
    <string name="health_education2">Health Education</string>
    <string name="year_2_prep_for_bilingual_auth">YR 2 Prep for Bilingual Auth</string>
    <string name="year_3_testing">Year 3 Testing</string>
    <string name="cset">CSET</string>
    <string name="cset_prep_if_needed">Cset Prep (If needed)</string>
    <string name="renew_t_b_test_health_forms"><![CDATA[Renew T.B. Test & Health Forms]]></string>
    <string name="year_1_language">Year 1 Language</string>
    <string name="letters_of_recommendation">Letters of Recommendation</string>
    <string name="admission_interview">Admission Interview</string>
    <string name="year_4_prep_bilingual">Year 4 Prep Bilingual</string>
    <string name="biligual_auth_program">Biligual Auth Program</string>
    <string name="ed_specialist_program">ED Specialist Program</string>
    <string name="span_250_if_fluent_in_spanish">Span 250 (If Fluent in Spanish)</string>
    <string name="span_250_only_for_fluent_spanish_speakers">Span 250 (Only for Fluent Spanish Speakers)</string>
    <string name="year_4_testing">Year 4 Testing</string>
    <string name="retake_cse_if_needed">Retake CSE(If needed)</string>
    <string name="yr4_ed_plan_course"><![CDATA[YR4 ED Plan & Course]]></string>
    <string name="ed_422">ED 422</string>
    <string name="cbest3">CBEST</string>
    <string name="post_bac_pre_req">Post Bac PRE-REQ</string>
    <string name="t_b_test_health"><![CDATA[T.B. Test & Health]]></string>
    <string name="post_bac_testing">Post Bac Testing</string>
    <string name="cset_or_sunject_matter_waiver">CSET or SUnject Matter Waiver</string>
    <string name="cset_or_subject_matter_waiver">CSET or Subject Matter Waiver</string>
    <string name="cbest4">CBEST</string>
    <string name="post_bac_ed_credential_course_requirements">Post Bac ED Credential Course Requirements</string>
    <string name="advising_session">Advising Session</string>
    <string name="educ_364">EDUC 364</string>
    <string name="educ_350">EDUC 350</string>
    <string name="educ_422">EDUC 422</string>
    <string name="USCONpostbac">U.S Constitution</string>
    <string name="post_bac_prep_for_lang">Post Bac Prep for Lang</string>
    <string name="bilingual_authorization_program">Bilingual Authorization Program</string>
    <string name="t_b_test_health_form1"><![CDATA[T.B Test & Health Form]]></string>
    <string name="calrta_image">CalRTA Image</string>
    <string name="hard_copies_of_pathway_cheklists">Hard copies of Pathway cheklists.</string>
    <string name="password">password</string>
</resources>
