<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Checklist" android:background="@color/colorAccent">

    <android.support.v7.widget.Toolbar
            android:layout_width="368dp"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar" app:layout_constraintStart_toStartOf="@+id/toolbar"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/toolbar" android:background="@color/colorPrimaryDark"
            android:text="@string/calendar" android:textColor="@color/colorAccent" android:layout_marginBottom="8dp"
    />
    <Button
            android:text="@string/aid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/toolbar" app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            android:background="@color/colorPrimaryDark" android:textColor="@color/colorAccent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button4" android:layout_marginRight="8dp"/>

    <Button
            android:text="@string/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:background="@color/colorPrimaryDark" android:textColor="@color/colorAccent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/toolbar"/>
    <ScrollView
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintHorizontal_bias="0.0"
            android:layout_width="0dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/school" android:id="@+id/imageView2"
                    android:contentDescription="@string/logoschool"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView9"
                    android:text="@string/pre_requisite_yr_1"
                    android:textColor="@color/colorPrimaryDark" android:textStyle="bold"
                    app:fontFamily="@font/carter_one" android:textSize="24sp" android:gravity="center"
                    android:background="@color/colorheader" android:visibility="visible"/>
            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"

                    android:visibility="visible" android:background="@color/colorPrimary"/>
            <TableLayout
                    android:layout_width="378dp"
                    android:layout_height="108dp">

                <TableRow android:layout_width="505dp" android:layout_height="369dp">
                    <TextView
                            android:text="@string/t_b_test_health_form"
                            android:layout_width="335dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/Tb"
                            android:background="@color/textbackground"
                            app:fontFamily="@font/carter_one" android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" android:textAllCaps="false"/>
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/checkBox9"
                            android:textColor="@color/colorPrimaryDark"
                            app:buttonTint="@color/colorPrimary"
                            android:checked="false"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="@string/certificate_of_clearance_fingerprints"
                            android:layout_width="335dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/CF"
                            app:fontFamily="@font/carter_one" android:textColor="@color/colorPrimaryDark"
                            android:background="@color/textbackground" android:textAllCaps="false"
                            android:textStyle="bold"/>
                    <CheckBox
                            android:layout_width="match_parent"
                            app:buttonTint="@color/colorPrimary"
                            android:layout_height="wrap_content" android:id="@+id/checkBox5" android:checked="false"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:layout_width="335dp"
                            android:layout_height="wrap_content" android:id="@+id/CPR"
                            android:text="@string/cpr_training_certificate" android:textColor="@color/colorPrimaryDark"
                            app:fontFamily="@font/carter_one" android:background="@color/textbackground"
                            android:textStyle="bold"/>
                    <CheckBox
                            android:layout_width="match_parent"
                            app:buttonTint="@color/colorPrimary"
                            android:layout_height="wrap_content" android:id="@+id/checkBox6" android:checked="false"/>
                </TableRow>
            </TableLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView11"
                    android:text="@string/year_1_testing"
                    android:textColor="@color/colorPrimaryDark" android:textStyle="bold"
                    app:fontFamily="@font/carter_one" android:textSize="24sp" android:gravity="center"
                    android:background="@color/colorheader" android:visibility="visible"/>
            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"

                    android:visibility="visible" android:background="@color/colorPrimary"/>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="335dp"
                        android:layout_height="wrap_content" android:id="@+id/CBEST2"
                        android:text="@string/cbest" android:textColor="@color/colorPrimaryDark"
                        app:fontFamily="@font/carter_one" android:background="@color/textbackground"
                        android:textStyle="bold"/>
                <CheckBox
                        android:layout_width="match_parent"
                        app:buttonTint="@color/colorPrimary"
                        android:layout_height="wrap_content" android:id="@+id/checkBox12" android:checked="false"/>
            </TableRow>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/EDPlans"
                    android:textColor="@color/colorPrimaryDark" android:textStyle="bold"
                    app:fontFamily="@font/carter_one" android:textSize="24sp" android:gravity="center"
                    android:background="@color/colorheader" android:visibility="visible"
                    android:text="@string/year_1_eductional_plan"/>
            <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"

                    android:visibility="visible" android:background="@color/colorPrimary"/>
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="@string/align_undergrad"
                            android:layout_width="335dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/Align"
                            android:background="@color/textbackground"
                            app:fontFamily="@font/carter_one" android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" android:textAllCaps="false"/>
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/checkBox13"
                            android:textColor="@color/colorPrimaryDark"
                            app:buttonTint="@color/colorPrimary"
                            android:checked="false"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="@string/u_s_constitution"
                            android:layout_width="335dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/USCON"
                            android:background="@color/textbackground"
                            app:fontFamily="@font/carter_one" android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" android:textAllCaps="false"/>
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/checkBox14"
                            android:textColor="@color/colorPrimaryDark"
                            app:buttonTint="@color/colorPrimary"
                            android:checked="false"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="@string/health_education"
                            android:layout_width="335dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/HEALTHED"
                            android:background="@color/textbackground"
                            app:fontFamily="@font/carter_one" android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" android:textAllCaps="false"/>
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/checkBox15"
                            android:textColor="@color/colorPrimaryDark"
                            app:buttonTint="@color/colorPrimary"
                            android:checked="false"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>